# GameEngine2D

./: .gitignore  .gitmodules  CMakeLists.txt  Logging.cpp  Logging.h  Makefile  README.md  Window.cpp  Window.h  master.cpp
Application/: CMakeLists.txt
Application/assets/shaders/: MultiColor.glsl  SingleColor.glsl  Texture.glsl
Application/src/: Application.cpp  Sandbox2D.cpp  Sandbox2D.h  TestLayer.cpp  TestLayer.h
Engine/: CMakeLists.txt  EnginePCH.h
Engine/src/: App.cpp  App.h  Engine.h  EnginePCH.h  Layer.h  LayerStack.cpp  MouseEvent.h  Window.cpp  Window.h
Engine/src/Core/: App.cpp  App.h  LayerStack.h  master.cpp
Engine/src/Core/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
Engine/src/Engine/: EngineApp.cpp  EngineApp.h  EngineDefines.h  EngineEntryPoint.h  Input.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Logging.cpp  Logging.h  Timestep.h  Window.h
Engine/src/Engine/Audio/: ALBuffer.h  ALSource.cpp  ALSource.h  ALbuffer.cpp  AudioBackend.cpp  AudioBackend.h  AudioMaster.cpp  AudioMaster.h  WaveSample.cpp  WaveSample.h
Engine/src/Engine/Event/: Event.h  KeyCodes.h  KeyboardEvent.h  MouseButtons.h  MouseEvent.h  WindowEvent.h
Engine/src/Engine/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
Engine/src/Engine/Rendering/: Buffer.cpp  Buffer.h  RenderAPI.h  RenderCommand.cpp  RenderCommand.h  RenderContext.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  RendererCommand.cpp  RendererCommand.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
Engine/src/Engine/Rendering/Camera/: Camera.h  CameraController.cpp  CameraController.h  OrthographicCamera.cpp  OrthographicCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h
Engine/src/Event/: Event.h  KeyboardEvent.h  MouseEvent.h  WindowEvent.h
Engine/src/Platform/GLFW/: InputGLFW.cpp  InputGLFW.h  TimeGLFW.h  WindowGLFW.cpp  WindowGLFW.h
Engine/src/Platform/OpenGL/: BufferOpenGL.cpp  BufferOpenGL.h  ImGuiOpenGLRenderer.cpp  RenderContextOpenGL.cpp  RenderContextOpenGL.h  RendererAPIOpenGL.cpp  RendererAPIOpenGL.h  ShaderOpenGL.cpp  ShaderOpenGL.h  TextureOpenGL.cpp  TextureOpenGL.h  VertexArrayOpenGL.cpp  VertexArrayOpenGL.h
Engine/src/Platform/Window/: WindowGLFW.cpp  WindowGLFW.h
lib/cmake/glew/: glew-targets.cmake
lib/pkgconfig/: glew.pc  spdlog.pc
